kubernetes/appx-blue-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-appx-deployment-blue
  labels:
    demo-app: x
    deploy-color: blue
spec:
  replicas: 8
  selector:
    matchLabels:
      demo-app: x
      deploy-color: blue
  template:
    metadata:
      labels:
        demo-app: x
        deploy-color: blue
    spec:
      containers:
      - name: demo-appx-site-blue
        image: 'pedrofurtado/kubernetes-ruby-demo-appx:f85e5140dabd228041a9c275cc63a30372d77cf6'
        ports:
        - containerPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-appx-deployment-green
  labels:
    deploy-color: green
spec:
  replicas: 1
  selector:
    matchLabels:
      deploy-color: green
  template:
    metadata:
      labels:
        deploy-color: green
    spec:
      containers:
      - name: demo-appx-site-green
        image: 'pedrofurtado/kubernetes-ruby-demo-appy:f85e5140dabd228041a9c275cc63a30372d77cf6'
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: demo-appx-service
spec:
  type: LoadBalancer
  selector:
    deploy-color: blue
  ports:
  - port: 80
    targetPort: 3000
