kubernetes/appy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-appy-deployment
  namespace: default
  labels:
    demo-app: 'y'
spec:
  replicas: 2
  selector:
    matchLabels:
      demo-app: 'y'
  template:
    metadata:
      labels:
        demo-app: 'y'
    spec:
      containers:
      - name: demo-appy-site
        image: pedrofurtado/kubernetes-ruby-demo-appy
---
apiVersion: v1
kind: Service
metadata:
  name: demo-appy-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    demo-app: 'y'
  ports:
  - port: 80
    targetPort: 3000
