kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /appx
        pathType: Prefix
        backend:
          service:
            name: demo-appx-service
            port:
              number: 3001

  - http:
      paths:
      - path: /appy
        pathType: Prefix
        backend:
          service:
            name: demo-appy-service
            port:
              number: 3002

  - http:
      paths:
      - path: /appz
        pathType: Prefix
        backend:
          service:
            name: demo-appz-service
            port:
              number: 3003
